--- a/scss/components/_explanations.scss
+++ b/scss/components/_explanations.scss
@@ -56,7 +56,7 @@
   }
   &__heading {
     margin-top: 3px;
-    font-size: 36px;
+    font-size: 3.6rem;
     color: #2f281e;
     font-weight: bold;
   }
