--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -67,7 +67,7 @@
     border-radius: 4px;
     margin-top: 2.9rem;
     color: white;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: bold;
     color: #ffffff;
     height: 4.7rem;
