--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -129,6 +129,6 @@
 
   &__burger-list-item {
     padding: 7px 0;
-    font-size: 18px;
+    font-size: 1.8rem;
   }
 }
