--- a/style.css
+++ b/style.css
@@ -9,9 +9,12 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media (max-width: 340px) {
+    html {
+      font-size: 47%; } }
 
 body {
-  font: 16px poppins;
+  font: 1.6em poppins;
   margin: 3rem 10.2%;
   overflow-x: hidden; }
   @media (max-width: 425px) {
@@ -138,7 +141,7 @@ img {
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
   .Nav__burger-list-item {
     padding: 7px 0;
-    font-size: 18px; }
+    font-size: 1.8rem; }
 
 .Main {
   margin-top: 3.8rem; }
@@ -361,7 +364,7 @@ img {
         position: absolute; } }
   .Explanations__heading {
     margin-top: 3px;
-    font-size: 36px;
+    font-size: 3.6rem;
     color: #2f281e;
     font-weight: bold; }
   .Explanations__item-heading {
@@ -502,7 +505,7 @@ img {
     border-radius: 4px;
     margin-top: 2.9rem;
     color: white;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: bold;
     color: #ffffff;
     height: 4.7rem;
